<resources>
    <string name="app_name">PMDM_ramosL_1aEval</string>
    <string name="introduce_equipo_a">Introduce Equipo A</string>
    <string name="introduce_equipo_b">Introduce Equipo B</string>
    <string name="empezar">empezar</string>
    <string name="cambio_campo">cambio_campo</string>
    <string name="reiniciar">reiniciar</string>
    <string name="deshacer">Deshacer</string>
    <string name="_0">0</string>
    <string name="_3">+3</string>
    <string name="_2">+2</string>
    <string name="_1">+1</string>
</resources>