<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/pista"
    android:orientation="vertical"
    android:weightSum="4"
    >


    <EditText
        android:id="@+id/editTextA"
        android:layout_width="340dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:hint="@string/introduce_equipo_a"
        android:textAlignment="center"
        android:layout_marginStart="35dp"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <EditText
        android:id="@+id/editTextB"
        android:layout_width="340dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="36dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:hint="@string/introduce_equipo_b"
        android:textAlignment="center"
        android:layout_marginStart="35dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEmpezar"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="316dp"
        android:layout_weight="1"
        android:background="@color/gris"
        android:padding="15dp"
        android:layout_marginStart="105dp"
        android:text="@string/empezar"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>